# GoogleFilament

./: .gitmodules  CMakeLists.txt  README.md
NativeLib/: CMakeLists.txt
NativeLib/include/: window.hpp
NativeLib/src/: window.mm
Triangle/: CMakeLists.txt
Triangle/material/: compile_material.sh  unlit_color.inc  unlit_color.mat
Triangle/src/: main.cpp
